modified:   package.json

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Educator JS Codespace Template",
   "source": "src/index.html",
-  "homepage": "https://github.com/Nafiu-Mubashir/My_MLSA_Portfolio",
+  "homepage": "https://github.com.io/Nafiu-Mubashir/My_MLSA_Portfolio",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "build-gh": "parcel build --public-url 'https://github.com/Nafiu-Mubashir/My_MLSA_Portfolio'",
+    "build-gh": "parcel build --public-url 'https://github.com.io/Nafiu-Mubashir/My_MLSA_Portfolio'",
     "predeploy": "npm run build-gh",
     "deploy": "gh-pages -d dist"
   },
